fix phrase lang wrap and rtl support

--- a/components/video/Phrases.module.css
+++ b/components/video/Phrases.module.css
@@ -36,12 +36,13 @@
 }
 
 .cueText {
-	display: inline-block;
+	display: inline;
 }
 
 .ar {
 	font-family: 'Scheherazade New';
 	direction: rtl;
+	unicode-bidi: bidi-override;
 	/* text-align: left; */
 	/* font-weight: bold; */
 	/* display: inline-block; */
